--- a/CodeCampProjects/WebDesignCertification/RegistrationForm/index.html
+++ b/CodeCampProjects/WebDesignCertification/RegistrationForm/index.html
@@ -21,10 +21,10 @@
             <fieldset>
                 <legend>Account type (required)</legend>
                 <label for="personal-account">
-                    <input id="personal-account" type="radio" name="account-type" checked/> Personal
+                    <input id="personal-account" type="radio" name="account-type" checked class="inline"/> Personal
                 </label>
                 <label for="business-account">
-                    <input id="business-account" type="radio" name="account-type"/> Business
+                    <input id="business-account" type="radio" name="account-type" class="inline"/> Business
                 </label>
             </fieldset>
             <fieldset>
@@ -51,7 +51,7 @@
             </fieldset>
             
             <label for="terms-and-conditions">
-                <input type="checkbox" id="terms-and-conditions" required name="terms-and-conditions">I accept the <a href="https://www.freecodecamp.org/news/terms-of-service/">terms and conditions</a>
+                <input type="checkbox" id="terms-and-conditions" required name="terms-and-conditions" class="inline">I accept the <a href="https://www.freecodecamp.org/news/terms-of-service/">terms and conditions</a>
             </label>
             <input type="submit" value="Submit">
         </form>
